# Windblade_inspector

./: .gitignore  windblade.py
gazebo/launch/: fans_moveit_chomp_planning_pipeline.launch.xml  fans_moveit_default_warehouse_db.launch  fans_moveit_demo.launch  fans_moveit_demo_gazebo.launch  fans_moveit_fake_controller_manager.launch.xml  fans_moveit_gazebo.launch  fans_moveit_joystick_control.launch  fans_moveit_move_group.launch  fans_moveit_ompl_planning_pipeline.launch.xml  fans_moveit_pilz_planning_pipeline.launch.xml  fans_moveit_planning_context.launch  fans_moveit_planning_pipeline.launch.xml  fans_moveit_ros_controllers.launch  fans_moveit_run_benchmark_ompl.launch  fans_moveit_rviz.launch  fans_moveit_sensor_manager.launch.xml  fans_moveit_setup_assistant.launch  fans_moveit_trajectory_execution.launch.xml  fans_moveit_warehouse.launch  fans_moveit_warehouse_settings.launch.xml  fans_moveit_wind_generator_controller_manager.launch.xml  fans_moveit_wind_generator_sensor_manager.launch.xml  livox_mavros_posix_sitl_mid360.launch  livox_test_pattern.launch  pipeline_livox_to_pointcloud2.launch  pipeline_wtb_mapping.launch  wind_generator_demo.launch  wind_generator_sim_bringup.launch
gazebo/models/: Mid360  fans_model_source_assets  iris_mid360  sensors_only  wind_generator_description
gazebo/worlds/: livox_pattern_test_mesh.dae  livox_test_pattern.world  wind_farm copy.world  wind_farm.world
scripts/: fans_stop.py  filter_livox_forward.py  hub_acquisition_search.py  lidar_filter.py  px4ctrl_climb_forever.py  quick_takeoff_hover_2m.py  tatong_climd.py  tower_detector.py  tower_velocity_climb.py
shfiles/wind/: 1.1.开仿真.sh  1.停机.sh  2.开真值.sh  3.SLAM.sh  3.点云范围分割.sh  4.点云匹配建图.sh  5.1.px4ctrl自动起飞.sh  5.2.飞到指定高度.sh  5.2飞到指定高度.sh  5.keyboard_takeoff.sh  清理gazebo余毒.sh
src/fans_model/: README.md  未命名.abc  未命名.fbx  未命名.glb  未命名.ply  未命名.stl  未命名.usdc
src/fans_model/fans_move/: CMakeLists.txt  package.xml
src/fans_model/fans_move/scripts/: fans_move.py  stop_fans.py
src/fans_model/fans_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/fans_model/fans_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ros_controllers.yaml  wind_generator_description.srdf
src/fans_model/fans_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  sensor_manager.launch.xml  setup_assistant.launch  warehouse.launch  wind_generator_description_moveit_controller_manager.launch.xml  wind_generator_description_moveit_sensor_manager.launch.xml
src/fans_model/wind_generator_description/: CMakeLists.txt  package.xml
src/fans_model/wind_generator_description/config/: joint_names_wind_generator_urdf1.yaml
src/fans_model/wind_generator_description/meshes/: base_link.STL  link1.STL
src/fans_model/wind_generator_description/src/: wind_generator_pose_lock_plugin.cpp
src/fans_model/wind_generator_description/urdf/: wind_generator.xacro
src/fans_model/wind_generator_gazebo/: CMakeLists.txt  package.xml
src/fans_model/wind_generator_gazebo/launch/: sim_bringup.launch
src/livox_laser_simulation/: CMakeLists.txt  package.xml
src/livox_laser_simulation/include/livox_laser_simulation/: livox_points_plugin.h
src/livox_laser_simulation/launch/: mavros_posix_sitl_mid360.launch  test_pattern.launch
src/livox_laser_simulation/models/Mid360/: Mid360.sdf  model.config
src/livox_laser_simulation/models/iris_mid360/: iris_mid360.sdf
src/livox_laser_simulation/models/sensors_only/: model.sdf
src/livox_laser_simulation/rviz/: test_pattern.rviz
src/livox_laser_simulation/src/: calc_inertia.py  livox_points_plugin.cpp
src/livox_to_pointcloud2/: CMakeLists.txt  README.md  package.xml
src/livox_to_pointcloud2/include/livox_to_pointcloud2/: livox_converter.hpp
src/livox_to_pointcloud2/launch/: livox_to_pointcloud2.launch
src/livox_to_pointcloud2/src/: livox_to_pointcloud2_ros1.cpp
src/livox_to_pointcloud2/test/: test_livox_converter.cpp
src/px4ctrl/: CMakeLists.txt
src/px4ctrl/config/: ctrl_param_fpv.yaml
src/px4ctrl/launch/: increase_frequency.sh  land.sh  multi_ctrl.launch  run_ctrl.launch  run_ctrl_singl.launch  singl_run.launch  takeoff.sh
src/px4ctrl/src/: PX4CtrlFSM.cpp  PX4CtrlFSM.h  controller.cpp  input.cpp  px4ctrl_node.cpp
src/wtb_pointcloud_mapping/: CMakeLists.txt  README.md  package.xml
src/wtb_pointcloud_mapping/config/: mapping.yaml
src/wtb_pointcloud_mapping/include/wtb_pointcloud_mapping/: mapping_config.h  mapping_pipeline.h  occupancy_grid_3d.h  pointcloud_stitcher.h  ros_conversions.h  tower_ascent_controller.h  tower_axis_estimator.h  wtb_mapping_node.h
src/wtb_pointcloud_mapping/launch/: wtb_mapping.launch
src/wtb_pointcloud_mapping/rviz/: wtb_mapping.rviz
src/wtb_pointcloud_mapping/src/: initial_pose_frame_node.cpp  lidar_filter.cpp  mapping_config.cpp  mapping_pipeline.cpp  occupancy_grid_3d.cpp  pointcloud_stitcher.cpp  ros_conversions.cpp  tower_ascent_controller.cpp  tower_axis_estimator.cpp  wtb_mapping_node.cpp  wtb_tower_detector_node.cpp
support/: DEPLOY_XTDRONE.md  WTBInspector_复现实施方案.md
