<?xml version="1.0"?>
<package format="2">
  <name>livox_to_pointcloud2</name>
  <version>0.1.0</version>
  <description>Convert livox_laser_simulation CustomMsg clouds to PointCloud2 and crop them by field of view.</description>

  <maintainer email="dev@livoxtech.com">Livox Dev Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>livox_laser_simulation</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>gtest</test_depend>
</package>
