<?xml version="1.0"?>
<package format="2">
  <name>wtb_pointcloud_mapping</name>
  <version>0.1.0</version>
  <description>Pose-based Livox point cloud stitching and sparse 3D occupancy mapping for WTBInspector-style workflows.</description>

  <maintainer email="byz@todo.todo">byz</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>livox_laser_simulation</depend>

  <export>
  </export>
</package>
